feat: extract mcp domain layer with rich model (#221)
feat: extract mcp domain layer with rich model

References:
- [The Clean Architecture - Robert C. Martin](https://blog.cleancoder.com/uncle-bob/2012/08/13/the-clean-architecture.html)

Co-authored-by: Cursor <cursoragent@cursor.com>