@@ -1,7 +1,8 @@
 package com.ai.mcp.web;
 
-import com.ai.mcp.client.AiMcpClientService;
-import com.ai.mcp.web.McpClientController;
+import com.ai.mcp.application.usecase.McpFacade;
+import com.ai.mcp.domain.model.McpToolDefinition;
+import com.ai.mcp.domain.vo.McpServerConnection;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
@@ -9,35 +10,26 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.ai.chat.client.ChatClient;
-import org.springframework.ai.tool.definition.ToolDefinition;
 import org.springframework.http.HttpStatus;
 
 import java.util.List;
 import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 @DisplayName("McpClientController")
 class McpClientControllerTest {
 
     @Mock
-    private AiMcpClientService mcpClientService;
-
-    @Mock
-    private ChatClient.Builder chatClientBuilder;
-
-    @Mock
-    private ChatClient chatClient;
+    private McpFacade mcpFacade;
 
     private McpClientController controller;
 
     @BeforeEach
     void setUp() {
-        lenient().when(chatClientBuilder.build()).thenReturn(chatClient);
-        controller = new McpClientController(mcpClientService, chatClientBuilder);
+        controller = new McpClientController(mcpFacade);
     }
 
     @Nested
@@ -46,26 +38,13 @@ class McpClientControllerTest {
 
         @Test
         @DisplayName("should return READY status with tool count")
-        void shouldReturnReadyStatusWithToolCount() {
-            when(mcpClientService.getTotalToolCount()).thenReturn(5);
+        void should_return_ready_status_with_tool_count() {
+            when(mcpFacade.getTotalToolCount()).thenReturn(5);
 
             var response = controller.getStatus();
 
             assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody()).isNotNull();
-            assertThat(response.getBody().get("status")).isEqualTo("READY");
-            assertThat(response.getBody().get("registeredTools")).isEqualTo(5);
-        }
-
-        @Test
-        @DisplayName("should return zero tools when no tools registered")
-        void shouldReturnZeroToolsWhenNoToolsRegistered() {
-            when(mcpClientService.getTotalToolCount()).thenReturn(0);
-
-            var response = controller.getStatus();
-
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody().get("registeredTools")).isEqualTo(0);
+            assertThat(response.getBody()).containsEntry("registeredTools", 5);
         }
     }
 
@@ -75,30 +54,14 @@ class McpClientControllerTest {
 
         @Test
         @DisplayName("should return list of connected servers")
-        void shouldReturnListOfConnectedServers() {
-            AiMcpClientService.ServerInfo server1 = new AiMcpClientService.ServerInfo("server1", 3, "CONNECTED");
-            when(mcpClientService.getConnectedServers()).thenReturn(
-                    Map.of("server1", server1)
-            );
+        void should_return_list_of_connected_servers() {
+            when(mcpFacade.getConnectedServers()).thenReturn(Map.of(
+                    "server1", McpServerConnection.connected("server1", 3)));
 
             var response = controller.listServers();
 
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
             assertThat(response.getBody()).hasSize(1);
-            assertThat(response.getBody().get(0).get("name")).isEqualTo("server1");
-            assertThat(response.getBody().get(0).get("toolCount")).isEqualTo(3);
-            assertThat(response.getBody().get(0).get("status")).isEqualTo("CONNECTED");
-        }
-
-        @Test
-        @DisplayName("should return empty list when no servers connected")
-        void shouldReturnEmptyListWhenNoServersConnected() {
-            when(mcpClientService.getConnectedServers()).thenReturn(Map.of());
-
-            var response = controller.listServers();
-
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody()).isEmpty();
+            assertThat(response.getBody().getFirst().get("status")).isEqualTo("ACTIVE");
         }
     }
 
@@ -108,50 +71,14 @@ class McpClientControllerTest {
 
         @Test
         @DisplayName("should return list of registered MCP tools")
-        void shouldReturnListOfRegisteredMcpTools() {
-            var toolDef1 = mock(ToolDefinition.class);
-            when(toolDef1.name()).thenReturn("get_weather");
-            when(toolDef1.description()).thenReturn("Get current weather");
-
-            var toolDef2 = mock(ToolDefinition.class);
-            when(toolDef2.name()).thenReturn("search_docs");
-            when(toolDef2.description()).thenReturn("Search documents");
-
-            when(mcpClientService.getToolDefinitions()).thenReturn(List.of(toolDef1, toolDef2));
+        void should_return_list_of_registered_mcp_tools() {
+            when(mcpFacade.getToolDefinitions()).thenReturn(List.of(
+                    McpToolDefinition.create("get_weather", "Get current weather")));
 
             var response = controller.listTools();
 
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody()).hasSize(2);
-            assertThat(response.getBody().get(0).get("name")).isEqualTo("get_weather");
-            assertThat(response.getBody().get(0).get("description")).isEqualTo("Get current weather");
-            assertThat(response.getBody().get(1).get("name")).isEqualTo("search_docs");
-        }
-
-        @Test
-        @DisplayName("should return empty list when no tools registered")
-        void shouldReturnEmptyListWhenNoToolsRegistered() {
-            when(mcpClientService.getToolDefinitions()).thenReturn(List.of());
-
-            var response = controller.listTools();
-
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-            assertThat(response.getBody()).isEmpty();
-        }
-
-        @Test
-        @DisplayName("should handle null description gracefully")
-        void shouldHandleNullDescriptionGracefully() {
-            var toolDef = mock(ToolDefinition.class);
-            when(toolDef.name()).thenReturn("no_desc_tool");
-            when(toolDef.description()).thenReturn(null);
-            when(mcpClientService.getToolDefinitions()).thenReturn(List.of(toolDef));
-
-            var response = controller.listTools();
-
-            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
             assertThat(response.getBody()).hasSize(1);
-            assertThat(response.getBody().get(0).get("description")).isEqualTo("");
+            assertThat(response.getBody().getFirst().get("name")).isEqualTo("get_weather");
         }
     }
 
@@ -160,16 +87,30 @@ class McpClientControllerTest {
     class Chat {
 
         @Test
-        @DisplayName("should return internal server error on service exception")
-        void shouldReturnInternalServerErrorOnServiceException() {
-            when(mcpClientService.getRegisteredTools()).thenThrow(new RuntimeException("Service error"));
+        @DisplayName("should return bad request when question is blank")
+        void should_return_bad_request_when_question_is_blank() {
+            var response = controller.chat(new McpClientController.McpChatRequest("  ", null));
 
-            var request = new McpClientController.McpChatRequest("Hello", null);
-            var response = controller.chat(request);
+            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
+            assertThat(response.getBody()).containsEntry("error", "提问内容不能为空");
+        }
+
+        @Test
+        @DisplayName("should return bad request when question is null")
+        void should_return_bad_request_when_question_is_null() {
+            var response = controller.chat(new McpClientController.McpChatRequest(null, null));
+
+            assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
+        }
+
+        @Test
+        @DisplayName("should return internal server error on service exception")
+        void should_return_internal_server_error_on_service_exception() {
+            when(mcpFacade.chatWithTools("Hello")).thenThrow(new RuntimeException("Service error"));
+
+            var response = controller.chat(new McpClientController.McpChatRequest("Hello", null));
 
             assertThat(response.getStatusCode()).isEqualTo(HttpStatus.INTERNAL_SERVER_ERROR);
-            assertThat(response.getBody()).isNotNull();
-            assertThat(response.getBody().get("error")).contains("发生错误");
         }
     }
 }
